# ruff

./: Cargo.toml
crates/ruff_linter/: Cargo.toml
crates/ruff_python_ast/: Cargo.toml  ast.toml  generate.py
crates/ruff_python_ast/src/: comparable.rs  generated.rs  helpers.rs  name.rs  node.rs  nodes.rs  operator_precedence.rs  python_version.rs  relocate.rs  visitor.rs
crates/ruff_python_ast/src/visitor/: source_order.rs  transformer.rs
crates/ruff_python_parser/: Cargo.toml
crates/ruff_python_parser/src/parser/: expression.rs  helpers.rs  mod.rs  pattern.rs  recovery.rs  statement.rs
crates/ruff_python_parser/src/snapshots/: ruff_python_parser__string__tests__dont_panic_on_8_in_octal_escape.snap  ruff_python_parser__string__tests__fstring_constant_range.snap  ruff_python_parser__string__tests__fstring_escaped_character.snap  ruff_python_parser__string__tests__fstring_escaped_newline.snap  ruff_python_parser__string__tests__fstring_line_continuation.snap  ruff_python_parser__string__tests__fstring_parse_self_documenting_base.snap  ruff_python_parser__string__tests__fstring_parse_self_documenting_base_more.snap  ruff_python_parser__string__tests__fstring_parse_self_documenting_format.snap  ruff_python_parser__string__tests__fstring_unescaped_newline.snap  ruff_python_parser__string__tests__parse_empty_fstring.snap  (+38 more)
crates/ruff_python_trivia/: Cargo.toml
crates/ruff_source_file/: Cargo.toml
crates/ruff_text_size/: Cargo.toml
crates/ty_module_resolver/: Cargo.toml
crates/ty_python_semantic/: Cargo.toml
(+541 files in other folders)
