[package]
description = "Unofficial fork for RustPython"
name = "rustpython-ruff_python_trivia"
version = "0.15.8"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }

itertools = { workspace = true }
unicode-ident = { workspace = true }

[lints]
workspace = true
